tests/baselines/reference/destructuringParameterDeclaration1ES6.errors.txt
destructuringParameterDeclaration1ES6.ts(14,4): error TS2345: Argument of type '[number, number, string[][], number]' is not assignable to parameter of type '[number, number, string[][]]'.
  Source has 4 element(s) but target allows only 3.
destructuringParameterDeclaration1ES6.ts(26,5): error TS7010: 'b5', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration1ES6.ts(26,8): error TS7006: Parameter 'z' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(26,11): error TS7006: Parameter 'y' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(26,17): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(26,20): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(26,25): error TS7031: Binding element 'p' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(26,33): error TS7031: Binding element 'q' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(26,36): error TS7031: Binding element 'r' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(32,5): error TS2322: Type 'number' is not assignable to type 'null | undefined'.
destructuringParameterDeclaration1ES6.ts(32,8): error TS2322: Type 'number' is not assignable to type 'null | undefined'.
destructuringParameterDeclaration1ES6.ts(32,11): error TS2322: Type 'number' is not assignable to type 'null | undefined'.
destructuringParameterDeclaration1ES6.ts(33,4): error TS2345: Argument of type '"string"' is not assignable to parameter of type 'null | undefined'.
destructuringParameterDeclaration1ES6.ts(34,4): error TS2345: Argument of type '"string"' is not assignable to parameter of type 'null | undefined'.
destructuringParameterDeclaration1ES6.ts(39,18): error TS7031: Binding element 'x' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(39,25): error TS7031: Binding element 'j' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(43,14): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(43,17): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(43,22): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(44,14): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(44,17): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(58,4): error TS2345: Argument of type '[number, number, [[string]], boolean, boolean]' is not assignable to parameter of type '[any, any, [[any]]]'.
  Source has 5 element(s) but target allows only 3.
destructuringParameterDeclaration1ES6.ts(65,5): error TS7010: 'd3', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration1ES6.ts(65,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(65,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(65,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(66,5): error TS7010: 'd4', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration1ES6.ts(66,9): error TS7031: Binding element 'x' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(66,12): error TS7031: Binding element 'y' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(66,15): error TS7031: Binding element 'z' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(67,5): error TS7010: 'e0', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration1ES6.ts(67,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(67,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(67,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(74,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(74,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(74,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(78,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(78,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(78,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(79,9): error TS7031: Binding element 'x' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(79,12): error TS7031: Binding element 'y' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(79,15): error TS7031: Binding element 'z' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(80,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(80,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(80,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(90,17): error TS7031: Binding element 'number' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(93,18): error TS7031: Binding element 'number' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(93,25): error TS7031: Binding element 'string' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(93,32): error TS7031: Binding element 'any' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(96,18): error TS2300: Duplicate identifier 'number'.
destructuringParameterDeclaration1ES6.ts(96,18): error TS7031: Binding element 'number' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(96,26): error TS2300: Duplicate identifier 'number'.
destructuringParameterDeclaration1ES6.ts(96,26): error TS7031: Binding element 'number' implicitly has an 'any' type.
destructuringParameterDeclaration1ES6.ts(96,34): error TS2300: Duplicate identifier 'number'.
destructuringParameterDeclaration1ES6.ts(96,34): error TS7031: Binding element 'number' implicitly has an 'any' type.


==== destructuringParameterDeclaration1ES6.ts (56 errors) ====
    // Conformance for emitting ES6
    
    // A parameter declaration may specify either an identifier or a binding pattern.
    // The identifiers specified in parameter declarations and binding patterns
    // in a parameter list must be unique within that parameter list.
    
    // If the declaration includes a type annotation, the parameter is of that type
    function a1([a, b, [[c]]]: [number, number, string[][]]) { }
    function a2(o: { x: number, a: number }) { }
    function a3({j, k, l: {m, n}, q: [a, b, c]}: { j: number, k: string, l: { m: boolean, n: number }, q: (number|string)[] }) { };
    function a4({x, a}: { x: number, a: number }) { }
    
    a1([1, 2, [["world"]]]);
    a1([1, 2, [["world"]], 3]);
       ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[number, number, string[][], number]' is not assignable to parameter of type '[number, number, string[][]]'.
!!! error TS2345:   Source has 4 element(s) but target allows only 3.
    
    
    // If the declaration includes an initializer expression (which is permitted only
    // when the parameter list occurs in conjunction with a function body),
    // the parameter type is the widened form (section 3.11) of the type of the initializer expression.
    
    function b1(z = [undefined, null]) { };
    function b2(z = null, o = { x: 0, y: undefined }) { }
    function b3({z: {x, y: {j}}} = { z: { x: "hi", y: { j: 1 } } }) { }
    
    interface F1 {
        b5(z, y, [, a, b], {p, m: { q, r}});
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'b5', which lacks return-type annotation, implicitly has an 'any' return type.
           ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
              ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                    ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
                       ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                            ~
!!! error TS7031: Binding element 'p' implicitly has an 'any' type.
                                    ~
!!! error TS7031: Binding element 'q' implicitly has an 'any' type.
                                       ~
!!! error TS7031: Binding element 'r' implicitly has an 'any' type.
    }
    
    function b6([a, z, y] = [undefined, null, undefined]) { }
    function b7([[a], b, [[c, d]]] = [[undefined], undefined, [[undefined, undefined]]]) { }
    
    b1([1, 2, 3]);  // z is widen to the type any[]
        ~
!!! error TS2322: Type 'number' is not assignable to type 'null | undefined'.
           ~
!!! error TS2322: Type 'number' is not assignable to type 'null | undefined'.
              ~
!!! error TS2322: Type 'number' is not assignable to type 'null | undefined'.
    b2("string", { x: 200, y: "string" });
       ~~~~~~~~
!!! error TS2345: Argument of type '"string"' is not assignable to parameter of type 'null | undefined'.
    b2("string", { x: 200, y: true });
       ~~~~~~~~
!!! error TS2345: Argument of type '"string"' is not assignable to parameter of type 'null | undefined'.
    
    
    // If the declaration specifies a binding pattern, the parameter type is the implied type of that binding pattern (section 5.1.3)
    enum Foo { a }
    function c0({z: {x, y: {j}}}) { }
                     ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
                            ~
!!! error TS7031: Binding element 'j' implicitly has an 'any' type.
    function c1({z} = { z: 10 }) { }
    function c2({z = 10}) { }
    function c3({b}: { b: number|string} = { b: "hello" }) { }
    function c5([a, b, [[c]]]) { }
                 ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
                    ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                         ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    function c6([a, b, [[c=1]]]) { }
                 ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
                    ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
    
    c0({z : { x: 1, y: { j: "world" } }});      // Implied type is { z: {x: any, y: {j: any}} }
    c0({z : { x: "string", y: { j: true } }});  // Implied type is { z: {x: any, y: {j: any}} }
    
    c1();             // Implied type is {z:number}?
    c1({ z: 1 })      // Implied type is {z:number}? 
    
    c2({});         // Implied type is {z?: number}
    c2({z:1});      // Implied type is {z?: number}
    
    c3({ b: 1 });     // Implied type is { b: number|string }.
    
    c5([1, 2, [["string"]]]);               // Implied type is is [any, any, [[any]]]
    c5([1, 2, [["string"]], false, true]);  // Implied type is is [any, any, [[any]]]
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[number, number, [[string]], boolean, boolean]' is not assignable to parameter of type '[any, any, [[any]]]'.
!!! error TS2345:   Source has 5 element(s) but target allows only 3.
    
    
    // A parameter can be marked optional by following its name or binding pattern with a question mark (?)
    // or by including an initializer.
    
    interface F2 {
        d3([a, b, c]?);
        ~~~~~~~~~~~~~~~
!!! error TS7010: 'd3', which lacks return-type annotation, implicitly has an 'any' return type.
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
        d4({x, y, z}?);
        ~~~~~~~~~~~~~~~
!!! error TS7010: 'd4', which lacks return-type annotation, implicitly has an 'any' return type.
            ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'y' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'z' implicitly has an 'any' type.
        e0([a, b, c]);
        ~~~~~~~~~~~~~~
!!! error TS7010: 'e0', which lacks return-type annotation, implicitly has an 'any' return type.
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    }
    
    class C2 implements F2 {
        constructor() { }
        d3() { }
        d4() { }
        e0([a, b, c]) { }
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    }
    
    class C3 implements F2 {
        d3([a, b, c]) { }
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
        d4({x, y, z}) { }
            ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'y' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'z' implicitly has an 'any' type.
        e0([a, b, c]) { }
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    }
    
    function d5({x, y} = { x: 1, y: 2 }) { }
    d5();  // Parameter is optional as its declaration included an initializer
    
    // Destructuring parameter declarations do not permit type annotations on the individual binding patterns,
    // as such annotations would conflict with the already established meaning of colons in object literals.
    // Type annotations must instead be written on the top- level parameter declaration
    
    function e1({x: number}) { }  // x has type any NOT number
                    ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
    function e2({x}: { x: number }) { }  // x is type number
    function e3({x}: { x?: number }) { }  // x is an optional with type number
    function e4({x: [number,string,any] }) { }  // x has type [any, any, any]
                     ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
                            ~~~~~~
!!! error TS7031: Binding element 'string' implicitly has an 'any' type.
                                   ~~~
!!! error TS7031: Binding element 'any' implicitly has an 'any' type.
    function e5({x: [a, b, c]}: { x: [number, number, number] }) { }  // x has type [any, any, any]
    
    function e6({x: [number, number, number]}) { }  // error, duplicate identifier;
                     ~~~~~~
!!! error TS2300: Duplicate identifier 'number'.
                     ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
                             ~~~~~~
!!! error TS2300: Duplicate identifier 'number'.
                             ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
                                     ~~~~~~
!!! error TS2300: Duplicate identifier 'number'.
                                     ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
    
    
    